[esp32-pilot] add state machine functions
1. state machine functions
  - event message parsing

Change-Id: I353ee27107e2146ca4bf700a7d4d8a47a2779321

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(
 					"task_led.c"
 					"task_button.c"
 					"task_state_machine.c"
+					"state_func.c"
     INCLUDE_DIRS 	"."
 					"include"
 	)
