[ESP32 Pilot] Add one-shot timer
1. one-shot timer
  - add a one-shot timer for state timeout

Change-Id: I54ff73e8ffefbc75537f174c41cea5d503653869

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(
 					"task_button.c"
 					"task_state_machine.c"
 					"state_func.c"
+					"timer_func.c"
     INCLUDE_DIRS 	"."
 					"include"
 	)
